First trials with Traefik

--- a/example/nginx/nginx.conf
+++ b/example/nginx/nginx.conf
@@ -60,8 +60,9 @@ http {
         ssl_certificate     /etc/ssl/server.crt;
         ssl_certificate_key /etc/ssl/server.key;
 
-        error_page 401 = @error401;
         error_page 403 = https://auth.test.local:8080/error/403;
+        
+        error_page 401 = @error401;
         location @error401 {
             return 302 https://auth.test.local:8080;
         }
@@ -72,7 +73,7 @@ http {
             proxy_set_header  X-Real-IP $remote_addr;
             proxy_set_header  Host $http_host;
 
-            proxy_pass        http://authelia/verify;
+            proxy_pass        http://authelia/verify?redirect=https://auth.test.local:8080;
         }
 
         location = /secret.html {
@@ -85,6 +86,13 @@ http {
             auth_request_set $expiry $upstream_http_remote_expiry;
             proxy_set_header Remote-Expiry $expiry;
         }
+    }
+
+    server {
+        listen 80;
+        root /usr/share/nginx/html;
+ 
+        server_name     traefik.test.local;
     }
 }
 
